--- a/TekTrackFrontEnd/TekTrack/package.json
+++ b/TekTrackFrontEnd/TekTrack/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.24",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.3",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.34.0",
     "react-native-web": "^0.19.12",
     "react-router-dom": "^6.26.0"
   },
