--- a/TekTrackBackEnd/Track/pom.xml
+++ b/TekTrackBackEnd/Track/pom.xml
@@ -88,22 +88,22 @@
 			<version>5.11.0</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<dependency> <!-- FOR H2 IF WE NEED IT -->
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<dependency> <!-- FOR PERSISTENCE -->
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-			<version>2.3.1</version> <!-- Or any other version compatible with your project -->
+			<version>2.3.1</version> 
 		</dependency>
-		<dependency>
+		<dependency> <!-- FOR MYSQL -->
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
+		<dependency> <!-- FOR JDBC CONNECTIONS -->
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
 			<scope>runtime</scope>
