--- a/TekTrackBackEnd/Track/src/main/resources/application.properties
+++ b/TekTrackBackEnd/Track/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.sql.init.mode=always
 spring.datasource.type=com.mysql.cj.jdbc.MysqlDataSource
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLInno8DBDialect
 spring.datasource.generate-unique-name=true
