--- a/TekTrackBackEnd/Track/pom.xml
+++ b/TekTrackBackEnd/Track/pom.xml
@@ -98,11 +98,6 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.1</version> 
 		</dependency>
-<!--		<dependency> &lt;!&ndash; FOR MYSQL &ndash;&gt;-->
-<!--			<groupId>com.mysql</groupId>-->
-<!--			<artifactId>mysql-connector-j</artifactId>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
 		<dependency> <!-- FOR JDBC CONNECTIONS -->
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
@@ -117,6 +112,16 @@
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.3.0</version>
+		</dependency>
+		<dependency> <!-- OAUTH2 SPRING DEPENDENCY -->
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-oauth2-client</artifactId>
+    		<version>6.3.1</version>
+		</dependency>
+		<dependency> <!-- JWT API DEPENDENCY -->
+    		<groupId>io.jsonwebtoken</groupId>
+    		<artifactId>jjwt-api</artifactId>
+    		<version>0.11.5</version>
 		</dependency>
 	</dependencies>
 
