--- a/TekTrackBackEnd/Track/pom.xml
+++ b/TekTrackBackEnd/Track/pom.xml
@@ -164,6 +164,11 @@
 			<version>3.6.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.2.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
